k8s/shared/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: beer-rating-backend
  name: beer-rating-backend
spec:
  selector:
    app: beer-rating-backend
  ports:
  - port: 8178
    protocol: TCP
    targetPort: 5178
  type: ClusterIP
