k8s/shared/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beer-rating-frontend
  labels:
    app: beer-rating-frontend
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beer-rating-frontend
            port:
              number: 8179
